--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -29,6 +29,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".pages.account.GuideActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name=".pages.main.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
