--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -36,6 +36,7 @@
         </activity>
         <activity
             android:name=".pages.main.MainActivity"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
