--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
+     <uses-permission android:name="android.permission.INTERNET" />
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
