--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -60,6 +60,12 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".pages.main.DragOrderGridActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.roid.crash.CrashReportActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|locale"
             android:exported="false"
