--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -77,6 +77,12 @@
             android:windowSoftInputMode="adjustPan|stateHidden" >
         </activity>
 
+        <receiver android:name="com.strod.yssl.clientcore.NetworkReceiver" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
         <!-- sharesdk -->
         <activity
             android:name="com.mob.tools.MobUIShell"
@@ -109,7 +115,7 @@
             <!--
 				如果集成QQ分享，或者使用QQ客户端来进行QQ空间的分享，须要在此处添加一个对ACTION_VIEW
 				事件的过滤器，其中的scheme是“tencent”前缀再开发者应用的加上appId。如果此过滤器不设置，
-				则分享结束以后不能得到正确的回调
+				则分享结束以后不能得到正确的回调
             -->
             <intent-filter android:priority="1000" >
                 <data android:scheme="tencent100371282" />
