--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -72,6 +72,32 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".pages.account.LoginActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <activity
+            android:name=".pages.personal.AboutUsActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <activity
+            android:name=".pages.personal.MyPublishActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".pages.personal.FeedBackActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name="com.roid.crash.CrashReportActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|locale"
             android:exported="false"
@@ -121,7 +147,10 @@
             <!--
 				如果集成QQ分享，或者使用QQ客户端来进行QQ空间的分享，须要在此处添加一个对ACTION_VIEW
 				事件的过滤器，其中的scheme是“tencent”前缀再开发者应用的加上appId。如果此过滤器不设置，
-				则分享结束以后不能得到正确的回调
+				则分享结束以后不能得到正确的回调
+
+
+
             -->
             <intent-filter android:priority="1000" >
                 <data android:scheme="tencent100371282" />
