--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:theme="@style/DayTheme" >
         </activity>
         <activity
