--- a/yssl/AndroidManifest.xml
+++ b/yssl/AndroidManifest.xml
@@ -55,6 +55,14 @@
             android:theme="@style/DayTheme" >
         </activity>
         <activity
+            android:name=".pages.main.MainActivity2"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:theme="@style/DayTheme" >
+        </activity>
+        <activity
             android:name=".pages.details.DetailsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
